# nk-ipam

./: .env.example  .env.production.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.lxc.yml  docker-compose.yml
.github/workflows/: ci.yml
.kiro/specs/olt-mapping-enhancement/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/wireguard-ip-utilization/: design.md  requirements.md  tasks.md
app/Console/Commands/: ImportLegacyData.php
app/Http/Controllers/Api/: IpamController.php
app/Models/: AuditLog.php  IpPool.php  Olt.php  Router.php  RouterAddress.php  RouterRoute.php  Subnet.php  WireguardInterface.php  WireguardPeer.php
database/migrations/: 2024_01_01_000000_create_ipam_tables.php
deploy/: PLAYBOOK-PROXMOX-LXC.md
deploy/caddy/: Caddyfile
deploy/nginx/: netking-ipam.conf
deploy/scripts/: backup-sqlite.sh
deploy/systemd/: netking-ipam-backup.service  netking-ipam-backup.timer  netking-ipam.service
docker/: supervisord.conf
migrations/: 0001_init.sql  0002_router_addresses.sql  0003_wireguard_subnets.sql  0004_add_is_online.sql
routes/: api.php
src/: app_error.rs  config.rs  crypto.rs  db.rs  main.rs  mikrotik.rs  models.rs  net.rs  parser.rs  routes.rs  utilization.rs  worker.rs
static/: index.html
