[package]
name = "netking-ipam"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
axum = { version = "0.7", features = ["multipart"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures-util = "0.3"
hmac = "0.12"
http = "1"
ipnet = { version = "2.10", features = ["serde"] }
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono"] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
